[package]
name = "yalal"
version = "0.1.2"
authors = ["Samuel Rembisz <sjrembisz07@gmail.com>"]
edition = "2018"
description = "A library of helper functions and structs for vector and matrix manipulation"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
num-traits = "0.2.14"
